# volatility_estimator

./: .env  Cargo.toml  README.md
src/: calculate_volatility.rs  calculate_volatility_test.rs  main.rs  on_chain.rs
src/calc/: calculate_volatility.rs  calculate_volatility_test.rs
src/data/: coinapi.rs  dune.rs  dune.sql  kraken.rs  polygon.rs
src/util/: rounding.rs
