[package]
name = "volatility_estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"  
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
datetime = "0.5.2"

